<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Join_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LandingActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="400dp"
        android:layout_height="0dp"
        android:background="#000000"
        android:paddingEnd="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1_constraint"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="RtlSymmetry">

    </RelativeLayout>

    <Button
        android:id="@+id/join_button"
        android:layout_width="300dp"
        android:layout_height="110dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FF7AA4"
        android:fontFamily="monospace"
        android:text="@string/join"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_button"
        tools:visibility="visible" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FF7AA4"
        android:fontFamily="monospace"
        android:text="@string/start"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/button1_constraint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/shapre_logo"
        android:contentDescription="@string/shaprelogo" />


</androidx.constraintlayout.widget.ConstraintLayout>