<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClientActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        style="@android:style/Widget.ScrollView"
        android:layout_width="800dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Chat_Label"></ScrollView>

    <Button
        android:id="@+id/Chat_Label"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#2B2B2B"
        android:clickable="false"
        android:gravity="left|center_vertical"
        android:paddingStart="75dp"
        android:text="@string/real_time_chat"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPager"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:layout_marginBottom="2dp"
        android:background="#FFC4D8"
        app:layout_constraintBottom_toTopOf="@+id/Chat_Label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.viewpager.widget.ViewPager>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="640dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="#00000000"
        android:backgroundTint="#00000000"
        android:backgroundTintMode="add"
        android:textColorHint="#0E0E0E"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTintMode="add"
            android:hint="@string/enter_text"
            android:textColor="#0F0F0F"
            android:textColorHint="#141414" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sendtxt"
        android:layout_width="136dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#333333"
        android:clickable="true"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Sendtxt"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>